Add changes due to recent commit